<resources>

    <!-- General app strings -->
    <string name="app_name">home finances helper</string>

    <!-- Login activity -->
    <string name="login_prompt">Enter your e-mail address</string>
    <string name="password_prompt">Enter your password</string>
    <string name="password_confirmation_prompt">Confirm your password</string>
    <string name="login_action">Log in!</string>
    <string name="register_action">Register new account!</string>
    <string name="confirm_registration_action">Confirm your registration</string>
    <string name="cancel_registration_action">Cancel registration</string>
    <string name="register_bad_password">Password must contain at least: 1 lower case character, 1 upper case character, 1 number, 1 special character min 6</string>
    <string name="register_passwords_does_not_match">Passwords do not match</string>
    <string name="register_email_not_valid">Bad email address</string>
    <string name="login_credentials_error">Entered email address or password are incorrect!</string>
    <string name="login_account_manager_already_exists">There is already an account saved in app. Remove previous account first.</string>

    <!-- BudgetList(main) fragment -->
    <string name="budget_list_loading_error">There was a problem loading your list!</string>
    <string name="user_help_frame_no_list_found">No planned budgets :)</string>
    <string name="budget_list_delete_button">Delete selected lists</string>
    <string name="budget_list_dialog_sort_by_text">Sort by:</string>
    <string name="budget_list_value_text">Total: </string>
    <string name="budget_list_remaining_value_text">Remaining: </string>

    <!-- new/edit budget list fragment -->
    <string name="new_budget_list_toolbar_name">Add new list</string>
    <string name="new_budget_list_name_prompt">List name:</string>
    <string name="new_budget_list_name_hint">Enter name of your new list here</string>
    <string name="new_budget_list_name_error">List must have name!</string>
    <string name="new_budget_list_value_prompt">Money amount:</string>
    <string name="new_budget_list_value_hint">Amount you can spend</string>
    <string name="new_budget_list_value_error">Wrong money amount!</string>
    <string name="new_budget_list_date_error">List can not end before it begins!</string>
    <string name="new_budget_list_ending_date_prompt">Due date:</string>
    <string name="new_budget_list_starting_date_prompt">Beginning date:</string>
    <string name="new_budget_list_cancel_button">Cancel</string>
    <string name="new_budget_list_confirm_button">Add list</string>
    <string name="edit_budget_list_confirm_button">Edit list</string>
    <string name="edit_budget_list_toolbar_name">Edit your budget list</string>

    <!-- new/edit expense fragment -->
    <string name="new_expense_spinner_title_text">Choose category of your new expense:</string>
    <string name="new_expense_list_name_prompt">Expense name:</string>
    <string name="new_expense_list_name_hint">Enter name of your new expense here</string>
    <string name="new_expense_list_name_error">Expense must have name!</string>
    <string name="new_expense_list_value_prompt">Money amount:</string>
    <string name="new_expense_list_value_hint">Amount of expense</string>
    <string name="new_expense_list_value_error">Wrong money amount!</string>
    <string name="new_expense_list_due_date_prompt">Due date:</string>
    <string name="new_expense_list_cancel_button">Cancel</string>
    <string name="new_expense_list_confirm_button">Add expense</string>

    <!-- share budget list fragment -->
    <string name="share_budget_list_toolbar_name">Share your budget list with friends</string>
    <string name="share_budget_list_search_button">Search</string>
    <string name="share_budget_list_share_button">Share List</string>
    <string name="share_budget_list_revoke_button">Revoke Permission</string>
    <string name="share_budget_list_search_hint">Search your friend list</string>
    <string name="share_budget_list_already_shared">Friends who can see that list:</string>
    <string name="share_budget_list_already_shared_no_positions">No friends can see that list</string>
    <string name="share_budget_list_not_shared">Friends you might want to share that list with:</string>
    <string name="share_budget_list_not_shared_no_positions">All of your current friends can see that list</string>
    <string name="share_budget_list_error">Can not load your friend list</string>

    <!-- Navigation drawer -->
    <string name="drawer_navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="drawer_contact_email" translatable="false">maciej.lipinski@student.wat.edu.pl</string>
    <string name="drawer_menu_prompt" translatable="false">Menu:</string>
    <string name="drawer_loading_error">Something went wrong!</string>
    <string name="drawer_logged_in_as">Currently logged in as:</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_statistics">Statistics</string>
    <string name="drawer_friends">Friends</string>
    <string name="drawer_admin_add_category">Add category</string>
    <string name="drawer_admin_edit_category">Edit category</string>


    <!-- Settings fragment -->
    <string name="dark_mode">Dark mode</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="dark_mode_preference_title">Dark mode</string>
    <string name="language_preference_title">Language</string>
    <string name="dark_mode_preference_on">On</string>
    <string name="dark_mode_preference_off">Off</string>

    <!-- Preference keys -->
    <string name="dark_mode_preference_key" translatable="false">dark_mode</string>
    <string name="language_preference_key" translatable="false">language</string>

    <!--Budget List Fragment Details Text-->
    <string name="user_greetings">Greetings </string>
    <string name="closest_list_to_date">Close to due: </string>
    <string name="closest_list_to_date_value_remaining">Money left till due date: </string>
    <string name="closest_list_to_date_value_total">From total of: </string>
    <string name="budget_list_details_delete_button">delete selected expenses</string>
    <string name="edit_budget_list">Edit</string>
    <string name="edit_budget_users">Users</string>
    <string name="edit_budget_sort">Sort by</string>
    <string name="budget_list_details_dialog_cancel_button">Cancel</string>
    <string name="budget_list_details_dialog_sort_by_text">Sort by:</string>


    <!-- Friends fragment -->
    <string name="friend_list_loading_error">There was a problem loading your friend list!</string>
    <string name="friend_list_unfriend_button">Unfriend</string>
    <string name="friend_list_decline_button">Decline</string>
    <string name="friend_list_confirm_button">Confirm</string>
    <string name="friend_waiting_confirmation_text">Awaiting confirmation:</string>
    <string name="friend_search_hint">Search your friend list</string>
    <string name="friend_fragment_title">Your friends</string>
    <string name="friend_decline">Decline</string>
    <string name="friend_accept">Accept</string>
    <string name="friend_request_sent">Request sent</string>
    <string name="friend_add_friend_hint">Enter your friend username</string>
    <string name="friend_send_friend_request_button">Add friend</string>
    <string name="friend_send_friend_request_text_view">Add your friend by entering their username and clicking "add friend"</string>
    <string name="friend_send_friend_request_error_text_view">User not found!</string>
    <string name="friend_send_friend_request_unknown_error">Unknown error occurred please try again later. If that problem persists please contant support</string>
    <string name="add_friend_menu_item">Add friend</string>

    <!-- new/edit categories (admin) -->
    <string name="category_add_button">Add</string>
    <string name="category_edit_button">Edit</string>
    <string name="category_cancel_button">Cancel</string>
    <string name="category_name_prompt">Category name:</string>
    <string name="category_name_hint">Enter category name here</string>
    <string name="category_icon_prompt">Choose category icon:</string>
    <string name="category_new_added_toast_text">New Category added</string>
    <string name="category_edited_toast_text">Category edited</string>
    <string name="category_delete_button">Delete selected categories</string>
    <string name="category_loading_error">There was a problem loading categories!</string>
    <string name="category_new_toolbar_title">Add new category</string>
    <string name="category_edit_toolbar_title">Edit selected category</string>
    <string name="category_browse_toolbar_title">Browse category</string>

    <!-- statistics -->
    <string name="statistics_year_loading_error">There was a problem fetching year data</string>
    <string name="statistics_expenses_loading_error">There was a problem fetching data about your expenses</string>
    <string name="statistics_pie_chart_center_text">"Total spent: "</string>
    <string name="statistics_pie_chart_no_data_center_text">Your data will be shown here</string>
    <string name="statistics_loading_currency_rates_error">Could not load currency rates. Currency rates might be shown incorrectly.</string>

    <!-- placeholders and testing -->
    <string name="place_holder_button">[PH]button</string>
    <string name="place_holder_content">[PH]content</string>

</resources>
