<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/edit_budget_list_menu_item"
        android:orderInCategory="2"
        android:title="@string/edit_budget_list"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/edit_budget_users_menu_item"
        android:orderInCategory="1"
        android:title="@string/edit_budget_users"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_people_black_24dp"
        android:iconTint="?attr/buttonColor"
        />
    <item
        android:id="@+id/edit_sort_expenses_menu_item"
        android:orderInCategory="3"
        android:title="@string/edit_budget_sort"
        app:showAsAction="ifRoom"
        />
</menu>