<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group
        android:id="@+id/drawer_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_friends"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/drawer_friends"
            />
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/drawer_settings"
            />
    </group>
    <group
        android:id="@+id/drawer_group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/drawer_logout" />
    </group>

</menu>