<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <ImageView
        android:id="@+id/background_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="?attr/backgroundImage" />

    <EditText
        android:id="@+id/login_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="50dp"
        android:autofillHints="email"
        android:hint="@string/login_prompt"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="?attr/textColor"
        />

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:autofillHints="password"
        android:hint="@string/password_prompt"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="?attr/textColor" />

    <Button
        android:id="@+id/login_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:text="@string/login_action"
        android:background="@drawable/standard_button_background"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="?attr/textColor"
        />

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="50dp"
        android:text="@string/register_action"
        android:background="@drawable/standard_button_background"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="?attr/textColor"/>

    <TextView
        android:id="@+id/login_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="50dp"
        android:text="@string/login_credentials_error"
        android:textColor="@color/login_error_color"
        android:textSize="12sp"
        android:visibility="invisible" />

</RelativeLayout>