<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity"
    android:background="?attr/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/fragment_budget_list_details_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor">

        <TextView
        android:id="@+id/fragment_budget_list_greetings_details_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="?attr/textColor"
        android:text="@string/user_greetings"
        android:textSize="25sp"/>
        <TextView
            android:id="@+id/fragment_budget_list_close_to_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="?attr/textColor"
            android:text="@string/closest_list_to_date"
            android:textSize="15sp"
            android:layout_marginTop="26sp"/>
        <TextView
            android:id="@+id/fragment_budget_list_close_to_date_value_remaining_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="?attr/textColor"
            android:text="@string/closest_list_to_date_value_remaining"
            android:textSize="15sp"
            android:layout_marginTop="42sp"/>
        <TextView
            android:id="@+id/fragment_budget_list_close_to_date_value_total_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="?attr/textColor"
            android:text="@string/closest_list_to_date_value_total"
            android:textSize="15sp"
            android:layout_marginTop="57sp"/>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/budget_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fragment_budget_list_details_frame_layout"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/budget_list_loading_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/budget_list_loading_error"
        android:textColor="?attr/textColor"
        android:textSize="40sp"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/budget_list_floating_action_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_black_24dp"
        android:tint="?attr/tintColor"
        android:backgroundTint="?attr/buttonColor"
        app:fabSize="normal" />

</RelativeLayout>